# Franka-robot-via-MetaQuest3-Hand

./: README.md
collect_data/: cameras.py  check_file.py  data_recorder.py  franka_robot.py  game_controller.py  replay_episodes.py  run_collection.py
robot_client/: CMakeLists.txt
robot_client/include/: examples_common.h  geofik.h  weighted_ik.h
robot_client/src/: examples_common.cpp  franka_pose_cmd_client.cpp  franka_r3_robot_server.cpp  franka_vr_control_client.cpp  franka_vr_control_current_pose_client.cpp  franka_vr_control_data_sender_client.cpp  franka_vr_control_record_client.cpp  franka_vr_control_recover_client.cpp  franka_vr_control_rt_client.cpp  geofik.cpp  weighted_ik.cpp
scripts/: jsonl2hdf5.py  teleop.sh  udp_listener.py
teleop_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
teleop_ws/install/franka_vr_teleop/lib/franka_vr_teleop/: spacemouse_to_robot_converter  vr_to_robot_converter  vr_to_robot_converter_recover
teleop_ws/install/franka_vr_teleop/share/franka_vr_teleop/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
teleop_ws/install/franka_vr_teleop/share/franka_vr_teleop/config/: pose_viz.rviz
teleop_ws/install/franka_vr_teleop/share/franka_vr_teleop/launch/: spacemouse_control.launch.py  tcp_vr_control.launch.py
teleop_ws/src/franka_vr_teleop/: package.xml  setup.cfg  setup.py
teleop_ws/src/franka_vr_teleop/franka_vr_teleop/: __init__.py  pose_receiver.py  vr_to_robot_converter_recover.py
teleop_ws/src/franka_vr_teleop/launch/: vr_control.launch.py
